<resources>
    <string name="app_name">Chefi</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_add_fragment">Hello add fragment</string>
    <string name="hello_favorites_fragment">Hello favorites fragment</string>
    <string name="hello_home_fragment">Hello home fragment</string>
    <string name="hello_search_fragment">Hello search fragment</string>
    <string name="hello_profile_fragment">Hello profile fragment</string>

    <!-- menu names -->
    // bottom menu
    <string name="home_title">Home</string>
    <string name="notifications_title">Notifications</string>
    <string name="search_title">Search</string>
    <string name="add_title">Add</string>
    <string name="profile_title">Profile</string>

    // register menu
    <string name="log_in">Log In</string>
    <string name="sign_in">Sign In</string>


    <string name="recipe_fragment">recipe fragment</string>
    <string name="hello_log_in_fragment">log in fragment</string>
    <string name="hello_sign_in_fragment">sign in fragment</string>

    // LoginActivity
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="userName">Username</string>
    <string name="quick_access_title">Quick Access Via:</string>

    // provider strings
    <string name="emailPasswordProvider">email_password</string>
    <string name="googleProvider">google</string>

    //Firestore collections keys
    <string name="usersCollection">users_collection</string>
    <string name="recipesCollection">recipes_collection</string>
    <string name="commentsCollection">recipes_comments_collection</string>
    <string name="notificationsCollection">notifications_collection</string>
    <string name="usersFeedCollection">users_feed_collection</string>

    //Firebase Storage keys
    <string name="imageUpload">uploads/images_upload</string>

    <!-- TODO: Remove or change this placeholder text -->
    // dialog sign in
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_description">profile description</string>
    <string name="full_name">full name</string>

    // Workers keys
    <string name="keyDataType">dataType</string>
    <string name="keyRecipeType">recipe</string>
    <string name="keyRecipesData">recipesArray</string>
    <string name="keyRecipeTitle">recipeTitle</string>
    <string name="keyRecipeName">recipeName</string>
    <string name="keyRecipeIngredients">recipeIngredients</string>
    <string name="keyRecipeStatus">recipeStatus</string>
    <string name="keyRecipeImageUrl">recipeImageUrl</string>
    <string name="keyRecipeTimeStamp">timeStamp</string>
    <string name="keyUri">uri</string>
    <string name="keyUrl">urlKey</string>
    <string name="keyDataBaseId">dataBaseId</string>
    <string name="keyRecipeDirections">recipeDirections</string>
    <string name="keyRecipeOwner">recipeOwner</string>
    <string name="keyFileExtension">fileExtension</string>

    // Profile xml
    <string name="job_success">Job Success</string>
    <string name="ui_ux_designer">UI/UX Designer</string>
    <string name="my_desc">Doing at the sweet spot between aesthetics and elegance to give life to your brand.My opinion belong to nobody but myself. A VIRGIN!</string>
    <string name="about_me">About Me</string>
    <string name="contact">Contact</string>
    <string name="skills">Skills</string>
    <string name="ratings">Star Ratings</string>

    // Profile Fragment
    <string name="profileBundleKey">user</string>

    // Camera keys
    <string name="keyCapturedPhotoUri">CAPTURED_PHOTO_URI_KEY</string>
    <string name="keyPathPhoto">CAPTURED_PHOTO_PATH_KEY</string>
    <string name="yitzchak">yitzchak</string>

    // Recipe fields keys
    <string name="keyUid">uid</string>
    <string name="keyDescription">description</string>
    <string name="keyLikes">likes</string>
    <string name="keyImageUrl">imageUrl</string>
    <string name="keyComments">comments</string>
    <string name="keyDirections">directions</string>
    <string name="keyIngredients">ingredients</string>
    <string name="keyStatus">status</string>
    <string name="keyTimestamp">timestamp</string>
    <string name="dialog_for_trade_msg">This recipe is for trade. \nWould you like to offer one of your recipe for exchange?</string>


</resources>
