<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/lightgrey"
    tools:context=".fragment.SignInFragment">

    <LinearLayout
        android:id="@+id/linearLayoutSignin"
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:background="@color/kas"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </LinearLayout>


    <ImageView
        app:layout_constraintTop_toTopOf="@id/linearLayoutSignin"
        app:layout_constraintEnd_toEndOf="@id/linearLayoutSignin"
        android:scaleX="-1"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:padding="10dp"
        android:src="@drawable/ic_arrow_back_24dp" />

    <TextView
        android:elevation="15dp"
        android:id="@+id/textViewChefi"
        app:layout_constraintBottom_toBottomOf="@id/linearLayoutSignin"
        app:layout_constraintLeft_toLeftOf="@id/linearLayoutSignin"
        app:layout_constraintRight_toRightOf="@id/linearLayoutSignin"
        app:layout_constraintTop_toTopOf="@+id/linearLayoutSignin"
        android:text="Chefi"
        android:textColor="@color/white"
        android:fontFamily="@font/welcomesummer"
        android:textSize="60sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintInnerSignIn"
        android:elevation="15dp"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutSignin"
        app:layout_constraintBottom_toBottomOf="@id/linearLayoutSignin"
        app:layout_constraintLeft_toLeftOf="@id/linearLayoutSignin"
        app:layout_constraintRight_toRightOf="@id/linearLayoutSignin"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0"
        android:background="@drawable/circularbordersolid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/password"
            android:ems="15"
            android:inputType="textPassword"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailEditText"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/userNameEditText"
            android:fontFamily="@font/proximanovaregular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="15"
            android:scrollbarSize="15dp"
            android:hint="@string/userName"
            android:inputType="text"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@id/emailEditText"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:fontFamily="@font/proximanovaregular"
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="15"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/passwordEditText"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userNameEditText"
            app:layout_constraintVertical_chainStyle="packed" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <Button
        android:fontFamily="@font/proximanovaregular"
        android:elevation="35dp"
        android:id="@+id/signInBtn"
        android:background="@drawable/circularbordersolid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintInnerSignIn"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintVertical_chainStyle="spread_inside" />

</androidx.constraintlayout.widget.ConstraintLayout>