<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgrey"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.LogInFragment">


    <LinearLayout
        android:id="@+id/linearLayoutLogin"
        android:layout_width="match_parent"
        android:layout_height="440dp"
        android:background="@color/kas"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </LinearLayout>

    <ImageView
        app:layout_constraintTop_toTopOf="@id/linearLayoutLogin"
        app:layout_constraintStart_toStartOf="@id/linearLayoutLogin"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:padding="10dp"
        android:src="@drawable/ic_arrow_back_24dp" />

    <TextView
        android:id="@+id/textViewChefi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="55dp"
        android:fontFamily="@font/welcomesummer"
        android:text="Chefi"
        android:textColor="@color/white"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="@id/linearLayoutLogin"
        app:layout_constraintLeft_toLeftOf="@id/constraintInnerLogin"
        app:layout_constraintRight_toRightOf="@id/constraintInnerLogin"
        app:layout_constraintTop_toTopOf="@+id/linearLayoutLogin">

    </TextView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintInnerLogin"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutLogin"
        app:layout_constraintBottom_toBottomOf="@id/linearLayoutLogin"
        app:layout_constraintLeft_toLeftOf="@id/linearLayoutLogin"
        app:layout_constraintRight_toRightOf="@id/linearLayoutLogin"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0"
        android:elevation="15dp"
        android:background="@drawable/circularbordersolid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="15"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHighlight="@color/kas"
            android:textColorLink="@color/kas"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailEditText"
            app:layout_constraintVertical_chainStyle="packed" />


        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="15"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHighlight="@color/kas"
            android:textColorLink="@color/kas"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/passwordEditText"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <Button
        android:id="@+id/logInBtn"
        android:elevation="35dp"
        android:fontFamily="@font/proximanovaregular"
        android:background="@drawable/circularbordersolid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textColor="#808080"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintInnerLogin"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintVertical_chainStyle="spread_inside" />












</androidx.constraintlayout.widget.ConstraintLayout>